--- a/views/add_case.ejs
+++ b/views/add_case.ejs
@@ -487,7 +487,7 @@
                             upload.style.backgroundImage = `url(${e.target.result})`;
                             upload.style.backgroundSize = 'cover';
                             upload.style.backgroundPosition = 'center';
-                            upload.classList.add('has-image');
+                            //upload.classList.add('has-image');
                         };
                         reader.readAsDataURL(file);
                     }
@@ -503,7 +503,7 @@
                             upload.style.backgroundImage = `url(${e.target.result})`;
                             upload.style.backgroundSize = 'cover';
                             upload.style.backgroundPosition = 'center';
-                            upload.classList.add('has-image');
+                            //upload.classList.add('has-image');
                         };
                         reader.readAsDataURL(file);
                     }
